--- a/NYL/style.css
+++ b/NYL/style.css
@@ -92,20 +92,15 @@
   padding: 20px 10px;
 }
 
-#main {
-  display: inline-block;
-  vertical-align: top;
-  width: 85%;
-  height: 100%;
-}
 #sidebar {
   background-color: var(--NYL-Steel);
   color: white;
   display: inline-block;
+  flex: 1 0 auto;
   font-family: "Effra";
   font-size: 11pt;
   width: 15%;
-  height: 715px;
+  height: 100%;
   padding: 40px 20px;
 }
 
